<resources>
    <string name="app_name">Bop it 33</string>
    <string name="app_correo">dsantander17@alumnos.utalca.cl</string>
    <string name="app_aboutit">En este proyecto se intentara hacer una aplicacion en base al juego bop it en Android. En el cual se guardara todo el score que se haya obtenido desde que
                                se instalo la aplicacion en nuestro dispositivo movil. Hasta ahora cuenta con distintas pantallas de las cuales destacamos
                                el Splash del inicio, el home o lobby de la aplicacion, la pantalla de preferencias y acerca de esta aplicacion que es la que nos encontramos actualmente.</string>
    <string name="button_text">OK</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="puntajes_Altos">Puntajes Máximos por Nivel</string>


    <!-- Buttons Titles -->
    <string name="boton_jugarSolitario"> Jugar en modo solitario</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Nickname</string>
    <string name="reply_title">Default reply action</string>
    <string name="boton_score">Puntajes Maximos</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Splash Preferences -->
    <string name="splash_title">Duración Inicio</string>
    <string name="splash_description">Duracion de la pantalla de presentación</string>

    <!-- Score Preferences -->
    <string name="score_actual">10</string>
    <string name="Puntuacion_Baja">Puntuacion Maxima en nivel Facil: </string>
    <string name="Puntuacion_Normal">Puntuacion Maxima en nivel Normal: </string>
    <string name="Puntuacion_Alta">Puntuacion Maxima en nivel Dificil: </string>

    <string name="Perdiste"> Perdiste :( </string>
    <string name="VolverJugar"> Volver a jugar </string>
    <string name="Salir"> Salir al menu </string>

</resources>