<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="Preference category">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/splash_values"
            android:entryValues="@array/splash_values"
            android:key="list_preference_1"
            android:title="@string/splash_title"
            app:entries="@array/splash_entries"
            app:entryValues="@array/splash_values"
            app:key="splash_time"
            app:summary="@string/splash_description" />
    </PreferenceCategory>


    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

   </PreferenceCategory>

</PreferenceScreen>